--- a/web/html/index.html
+++ b/web/html/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-    <link rel="logo" type="image/png" href="/web/assets:images/title_logo.png"/>
-    <title>Open Oddessy</title>
-  <body>
-    <h1>Open Oddessy</h1>
-    <img src=""
-  </body>
+
+<head>
+  <link rel="logo" type="image/png" href="/web/assets/title_logo.png" />
+  <title>Open Oddessy</title>
+</head>
+
+<body>
+  <h1>Open Oddessy</h1>
+  <h3>SDAAS</h3>
+  <h2>Sales Development as a Service</h2>
+  <a href="/web/html/connect.html">Connect W/ Open Oddessy</a>
+</body>
+
 </html>
